# shaders

./: Cargo.toml  README.md  build-wasm.sh
.cargo/: config.toml
boids/: Cargo.toml
boids/page/: package.json
boids/src/: main.rs
common/: Cargo.toml
page/: package-lock.json
page/src/: App.tsx
src/: framework.rs  lib.rs  main.rs
view/: package-lock.json  package.json  tsconfig.node.json
view/src/: App.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
