[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
async-executor = "1.8.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.1"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29", features = ["rwh_05"]}
fern = "0.6.2"
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.66"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-test = "0.3"
web-time = "0.2.3"
web-sys = { version = "0.3.64", features = [
  "Location",
  "Blob",
  "RequestInit",
  "RequestMode",
  "Request",
  "ImageData",
  "Response",
  "HtmlImageElement",
  "WebGl2RenderingContext",
  "CanvasRenderingContext2d",
] }
nanorand = "0.7.0"
