[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
winit.workspace = true
wgpu.workspace = true
wasm-bindgen.workspace = true
bytemuck.workspace = true

nanorand = "0.7.0"
lazy_static = "1.4.0"